<resources>
    <string name="app_name">DestiMate</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_confirm">Password Confirm</string>
    <string name="signup">Sign Up</string>
    <string name="username">Username</string>
    <string name="date">Birth Date</string>
    <string name="message_login_page">Ayo login dan lihat destinasi apa saja yang dapat membuatmu terpesona!</string>
    <string name="message_signup_page">Isi data di bawah ini untuk membuat akun baru!</string>
    <string name="title_login_page">Selamat datang di DestiMate!</string>
    <string name="title_signup_page">Buat akun DestiMate milikmu!</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_article">Article</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_profile">Profile</string>
    <string name="title_setting">Setting</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search_hint">Telusuri destinasi wisata</string>
    <string name="home_greeting">Hi, </string>
    <string name="home_greeting_message">Mau kemana hari ini?</string>
    <string name="home_recommendation">Rekomendasi untukmu</string>
    <string name="main_nearby">Destinasi di sekitarmu</string>
    <string name="main_favorite">Destinasi favorite</string>
    <string name="item_nama_destinasi">Nama lokasi</string>
    <string name="item_rating_destinasi">0.0</string>
    <string name="item_alamat_destinasi">Mataram</string>
    <string name="item_description">Masjid Nasional Al Akbar (atau biasa disebut Masjid Agung Surabaya) ialah masjid terbesar kedua di Indonesia yang berlokasi di Kota Surabaya, Jawa Timur setelah Masjid Istiqlal di Jakarta. Posisi masjid ini berada di wilayah Kelurahan Pagesangan, Kecamatan Jambangan, Surabaya dan tepat di samping Jalan Tol Surabaya-Gempol. Ciri yang mudah dilihat adalah kubahnya yang besar didampingi 4 kubah kecil yang berwarna biru. Serta memiliki satu menara yang tingginya 99 meter. Masjid Nasional Al-Akbar Surabaya dibangun sejak tanggal 4 Agustus 1995, atas gagasan Wali Kota Surabaya saat itu, H. Soenarto Soemoprawiro. Pembangunan Masjid ini ditandai dengan peletakan batu pertama oleh Wakil Presiden RI Try Sutrisno. Namun karena krisis moneter pembangunannya dihentikan sementara waktu. Tahun 1999, masjid ini dibangun lagi dan selesai tahun 2001. Pada 10 November 2000, Masjid ini diresmikan oleh Presiden RI KH. Abdurrahman Wahid.</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="berikan_rate">Berikan rating</string>
    <string name="rating_hint">(0.0)</string>
    <string name="budget">Rp. 2000,.</string>
    <string name="budget_needed">Budget avg.</string>
    <string name="category">Category : Alam, Sejarah Edukasi, Rekreasi</string>
    <string name="lihat_di_map">Lihat di Peta</string>
    <string name="destinasi_serupa">Destinasi serupa</string>
    <string name="title_activity_user">User</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="logout">Logout</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>