<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.detail.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/img_detail_photo"
                android:layout_width="0dp"
                android:layout_height="450dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/illustration" />

            <Button
                android:id="@+id/bt_detail_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:backgroundTint="#7EFFFFFF"
                android:text="@string/lihat_di_map"
                android:textColor="@color/black"
                app:cornerRadius="32dp"
                app:layout_constraintBottom_toTopOf="@+id/cardView"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_detail_destinasi_serupa"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:text="@string/destinasi_serupa"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_detail_serupa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_destinasi_serupa" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="-48dp"
                app:cardCornerRadius="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_detail_photo">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="32dp">

                    <TextView
                        android:id="@+id/tv_detail_rated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@string/rating_hint"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="@+id/ratingBar2"
                        app:layout_constraintStart_toEndOf="@+id/ratingBar2"
                        app:layout_constraintTop_toTopOf="@+id/ratingBar2" />

                    <ImageView
                        android:id="@+id/icon_item_rating2"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintStart_toStartOf="@+id/guideline9"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_rating"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/tv_detail_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@string/item_rating_destinasi"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@+id/icon_item_rating2"
                        app:layout_constraintStart_toEndOf="@+id/icon_item_rating2"
                        app:layout_constraintTop_toTopOf="@+id/icon_item_rating2" />

                    <TextView
                        android:id="@+id/tv_detail_alamat"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="16dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/item_alamat_destinasi"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toStartOf="@+id/guideline9"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/icon_item_address2"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/icon_item_address2"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_detail_alamat"
                        app:layout_constraintStart_toStartOf="@+id/tv_detail_name"
                        app:layout_constraintTop_toTopOf="@+id/tv_detail_alamat"
                        app:srcCompat="@drawable/ic_location_address"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/tv_detail_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="32dp"
                        android:text="@string/item_nama_destinasi"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                        android:textSize="32sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/icon_item_address2" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_begin="267dp" />

                    <RatingBar
                        android:id="@+id/ratingBar2"
                        style="@android:style/Widget.Material.RatingBar.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:clickable="true"
                        android:progressTint="#FFC107"
                        app:layout_constraintStart_toStartOf="@+id/tv_detail_berikan_rating"
                        app:layout_constraintTop_toBottomOf="@+id/tv_detail_berikan_rating" />

                    <TextView
                        android:id="@+id/tv_detail_berikan_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/berikan_rate"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                        android:textSize="8sp"
                        app:layout_constraintStart_toStartOf="@+id/tv_detail_name"
                        app:layout_constraintTop_toBottomOf="@+id/tv_detail_name" />

                    <TextView
                        android:id="@+id/tv_detail_budget"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/budget"
                        app:layout_constraintStart_toStartOf="@+id/guideline9"
                        app:layout_constraintTop_toTopOf="@+id/ratingBar2" />

                    <TextView
                        android:id="@+id/tv_detail_budget_indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/budget_needed"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                        android:textSize="8sp"
                        app:layout_constraintBottom_toTopOf="@+id/tv_detail_budget"
                        app:layout_constraintStart_toStartOf="@+id/guideline9" />

                    <TextView
                        android:id="@+id/tv_detail_category"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="32dp"
                        android:text="@string/category"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/ratingBar2"
                        app:layout_constraintTop_toBottomOf="@+id/ratingBar2" />

                    <TextView
                        android:id="@+id/tv_detail_description"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/item_description"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="@+id/tv_detail_category"
                        app:layout_constraintStart_toStartOf="@+id/tv_detail_category"
                        app:layout_constraintTop_toBottomOf="@+id/tv_detail_category" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>